Changed ITrackedEntity use wrappers and support for job @PostConstruct

--- a/WebUtils/TODO.txt
+++ b/WebUtils/TODO.txt
@@ -30,6 +30,18 @@ Controller
 		Should have session expiry time
 	
 	Take care of caching	
+	
+	Notifications
+		Event generation & handlers
+		handlers
+			web hooks
+			mail hooks
+			alerts
+		Event struct should be visible
+		
+	supervise other user
+		Log actual user and supervised user details as user name
+			
 Docs
 	DAO
 	Auth	
